// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-caSCKo fDUVkc"
  >
    <h5
      class="sc-fAjcbJ hQaiAK"
    >
      Node Labels
    </h5>
    <div
      class="sc-gisBJw kgtUZk"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-caSCKo fDUVkc"
  >
    <h5
      class="sc-fAjcbJ hQaiAK"
    >
      Node Labels
    </h5>
    <div
      class="sc-gisBJw kgtUZk"
    >
      <div
        class="sc-iRbamj sc-jlyJG jSoTEm"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-iRbamj sc-jlyJG jSoTEm"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-iRbamj sc-jlyJG jSoTEm"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-caSCKo fDUVkc"
  >
    <h5
      class="sc-fAjcbJ hQaiAK"
    >
      Property Keys
    </h5>
    <div
      class="sc-gisBJw kgtUZk"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-caSCKo fDUVkc"
  >
    <h5
      class="sc-fAjcbJ hQaiAK"
    >
      Property Keys
    </h5>
    <div
      class="sc-gisBJw kgtUZk"
    >
      <div
        class="sc-iRbamj sc-csuQGl jsVcdh"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-iRbamj sc-csuQGl jsVcdh"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-caSCKo fDUVkc"
  >
    <h5
      class="sc-fAjcbJ hQaiAK"
    >
      Relationship Types
    </h5>
    <div
      class="sc-gisBJw kgtUZk"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-caSCKo fDUVkc"
  >
    <h5
      class="sc-fAjcbJ hQaiAK"
    >
      Relationship Types
    </h5>
    <div
      class="sc-gisBJw kgtUZk"
    >
      <div
        class="sc-iRbamj sc-gipzik dOeCbX"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-iRbamj sc-gipzik dOeCbX"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-iRbamj sc-gipzik dOeCbX"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
